# nba-game-recap-summarizer

./: .coverage 2  .deployment-trigger  .gitignore  =0.34.0  Dockerfile.dpo.training  Dockerfile.inference  Dockerfile.training  MIGRATION_GUIDE.md  Makefile  NBA_GAME_RECAP_DEBUGGING_DOCUMENTATION.md  README.md  debug_batch_generation.py  debug_padding_issue.py  pyproject.toml  requirements-sagemaker-dpo.txt  requirements-sagemaker.txt
.github/scripts/: sagemaker_pipeline.py  sagemaker_pipeline_dpo.py  trigger_sagemaker_pipeline.py  trigger_sagemaker_pipeline_dpo.py
.github/workflows/: cleanup-ec2.yaml  cleanup-ecs.yaml  dev-dpo-tune.yaml  dev-train.yaml  manual-deploy-ec2.yaml  manual-deploy-ecs.yaml  manual-deploy.yaml  prod-dpo-tune.yaml  prod-train.yaml  staging-dpo-tune.yaml  staging-train.yaml  terraform-destroy.yaml
docs/: EC2_DEPLOYMENT.md  MULTI_MODEL_TESTING.md  REMOTE_DEV_RUNBOOK.md
preference_learning_experiments/: EVALUATION_GUIDE.md  NARRATIVE_STYLE_SCORING_PROMPT.md  README.md
preference_learning_experiments/colab/: RLAIF_Preference_Tuning.ipynb  RLAIF_Rewriting_Responses_with_Mistral.ipynb  RLAIF_Rewriting_Responses_with_Mistral_Discard_Hallucination.ipynb  colab_model_loading.py
preference_learning_experiments/notebooks/: dpo_training.py  kto_training_clean.py  (+1 more)
scripts/: analyze_dataset_quality.py  dpo_preprocessing.py  dpo_tune.py  evaluate_dpo.py  evaluate_model.py  generate_and_evaluate_summaries.py  investigate_extreme_ratios.py  monitor-ec2.sh  monitor_memory.py  preprocessing.py  requirements_evaluation.txt  robust_summary_generator.py  run_pipeline.py  run_summary_generation.sh  simple_summary_generator.py  train.py
terraform/: README.md
tests/: README_PHI_TESTING.md  test_phi_integration.py  utils.py
(+103 files in other folders)
