[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba_game_recap_summarizer"
version = "0.1.0"
description = "NBA game recap summarization with Llama and PEFT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2,<2.3",
  "torchvision>=0.17,<0.18",
  "torchaudio>=2.2,<2.3",
  "transformers>=4.53,<4.56",
  "accelerate>=0.33.0",
  "peft==0.11.1",
  "datasets>=2.20,<2.21",
  "tokenizers>=0.21,<0.22",
  "safetensors>=0.4.3",
  "evaluate",
  "pydantic>=2",
  "langsmith",
  "langchain-openai",
  "hydra-core>=1.3",
  "loguru",
  "wandb",
  "omegaconf>=2.3",
  "numpy<2.0",
  "nltk",
  "rouge-score",
  "bert-score",
  "pandas",
  "s3fs",
  "boto3",
  "sagemaker",
  "python-dotenv",
  "fastapi",
  "uvicorn[standard]",
  "requests",
  "psycopg2-binary",
  "huggingface_hub>=0.34.0",
  "bitsandbytes>=0.42.0",
  "sentencepiece>=0.1.99",
  "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
  "pytest-cov>=4.1",
  "coverage[toml]>=7.4",
  "pytest-mock",
  "mypy",
  "ipykernel"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line too long

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')"
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
